# open-swe

./: .gitignore  CUSTOMIZATION.md  Dockerfile  INSTALLATION.md  Makefile  README.md  aegra.json  default_prompt.md  langgraph.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr_lint.yml
agent/: prompt.py  server.py  webapp.py
agent/integrations/: __init__.py  daytona.py  devpod.py  langsmith.py  local.py  modal.py  runloop.py
agent/middleware/: ensure_no_empty_msg.py  open_pr.py
agent/tools/: __init__.py  commit_and_open_pr.py  fetch_url.py  get_branch_name.py  github_comment.py  github_review.py  http_request.py  linear_create_issue.py  linear_delete_issue.py  linear_get_issue.py  linear_get_issue_comments.py  linear_list_teams.py  linear_update_issue.py  list_repos.py  slack_thread_reply.py  web_search.py
agent/utils/: auth.py  github.py  github_comments.py  github_token.py  github_user_email_map.py  langsmith.py  linear.py  model.py  multimodal.py  repo.py  sandbox.py  sandbox_errors.py  sandbox_state.py  slack.py
helm/: DEPLOYMENT_CHECKLIST.md  README.md
helm/open-swe/: Chart.yaml  README.md  values.yaml
helm/open-swe/examples/: values-dev.yaml  values-prod.yaml
helm/open-swe/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: __init__.py  check_pr_merge_status.py  create_sandbox_snapshot.py  export_pr_urls.py  list_snapshots.py
tests/: test_devpod.py  test_github_comment_prompts.py  test_github_review.py  test_github_security.py  test_http_security.py  test_proxy_auth.py  test_repo_extraction.py  test_slack_context.py
