[project]
name = "open-swe-agent"
version = "0.1.0"
description = "Open SWE Agent - Python agent for automating software engineering tasks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "deepagents>=0.5.0a4",
    "fastapi>=0.135.3",
    "uvicorn>=0.43.0",
    "httpx>=0.28.1",
    "PyJWT>=2.12.0",
    "cryptography>=46.0.0",
    "langgraph-sdk>=0.3.12",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "markdownify>=1.2.2",
    "langchain-anthropic>=1.4.0",
    "aegra-cli>=0.9.2",
    "aegra-api>=0.9.2",
    "langsmith>=0.7.25",
    "langchain-openai==1.1.10",
    "langchain-daytona>=0.0.4",
    "langchain-modal>=0.0.2",
    "langchain-runloop>=0.0.3",
    "boto3>=1.35.0",
    "exa-py>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "Pygments>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
